--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -35,14 +35,14 @@
 }
 
 .greeting-text {
-  font-size: 70px;
+  font-size: 40px;
   line-height: 1.1;
   color: $textColor !important;
 }
 
 .greeting-text-p {
-  font-size: 30px;
-  line-height: 40px;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 .greeting-image-div > img {
@@ -85,7 +85,7 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .greeting-text {
-    font-size: 50px;
+    font-size: 50px;;
   }
   .greeting-text-p {
     font-size: 20px;
