--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -36,7 +36,8 @@ $lightBackground2: rgb(255, 255, 255);
 $lightBackground3: #f5f2f4;
 $blogCardContainerColor: #586069;
 // dark background colors
-$darkBackground: #171c28;
+// $darkBackground: #171c28;
+$darkBackground: linear-gradient(to right, #8A2BE2, #4B0082);
 
 // light theme box shadows
 $lightBoxShadowDark: rgba(0, 0, 0, 0.2);
