--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -37,7 +37,7 @@ $lightBackground3: #f5f2f4;
 $blogCardContainerColor: #586069;
 // dark background colors
 // $darkBackground: #171c28;
-$darkBackground: linear-gradient(to right, #8A2BE2, #4B0082);
+$darkBackground: linear-gradient(270deg, #41046d, #4B0082);
 
 // light theme box shadows
 $lightBoxShadowDark: rgba(0, 0, 0, 0.2);
